# CIti-FinBrain

./: AGENTS.md
Software/Backend/: .gitignore  README.md  pyproject.toml  requirements.txt
Software/Web/: README.md  webpack.config.js
Software/Web/src/app/routing/: routingProviders.ts
codex/init/: SKILL.md
